Update title for MTB San Carlos 2025 results

--- a/resultados.html
+++ b/resultados.html
@@ -66,7 +66,7 @@
 <body>
     <div class="container-fluid">
         <div class="table-title text-center">
-            <h2>Tiempos Preliminares Maraton MTB San Carlos 2025 50KM(Pueden Ser Modificados)</h2>
+            <h2>Tiempos Maraton MTB San Carlos 2025 50KM</h2>
         </div>
 
         <div class="table-responsive">
